--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   ],
   "name": "path-to-glob-pattern",
   "version": "1.0.0",
-  "description": "Convert file path/directory to glob pattern.",
+  "description": "Convert file/directory path to glob pattern.",
   "main": "lib/path-to-glob-pattern.js",
   "scripts": {
     "test": "mocha test/",
