--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "src/"
   ],
   "name": "path-to-glob-pattern",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "Convert file/directory path to glob pattern.",
   "main": "lib/path-to-glob-pattern.js",
   "scripts": {
@@ -44,7 +44,5 @@
     "power-assert": "^1.4.2",
     "shelljs": "^0.7.6"
   },
-  "dependencies": {
-
-  }
+  "dependencies": {}
 }
