--- a/package.json
+++ b/package.json
@@ -34,15 +34,14 @@
   },
   "homepage": "https://github.com/azu/path-to-glob-pattern",
   "devDependencies": {
-    "babel-cli": "^6.23.0",
-    "babel-preset-jsdoc-to-assert": "^4.0.0",
-    "babel-preset-latest": "^6.22.0",
-    "babel-preset-power-assert": "^1.0.0",
-    "babel-register": "^6.23.0",
-    "cross-env": "^3.1.4",
-    "mocha": "^3.2.0",
+    "@babel/cli": "^7.0.0",
+    "@babel/core": "^7.0.0",
+    "@babel/preset-env": "^7.0.0",
+    "@babel/register": "^7.0.0",
+    "cross-env": "^7.0.3",
+    "mocha": "^9.2.1",
     "power-assert": "^1.4.2",
-    "shelljs": "^0.7.6"
+    "shelljs": "^0.8.5"
   },
   "dependencies": {}
 }
